# futz

./: .gitignore  Makefile  README.md  futz.cabal  shell.nix
example/: Class.fz  Comb.fz  Data.fz  Example.fz  Layout.fz  SKI.fz  Syntax.fz  Validation.fz  comb.futz  example.futz
src/: Lexer.x  Main.hs  Parser.y  Printer.hs  Syntax.hs  Types.hs
src/Futz/: Infer.hs  Lexer.x  Lexer.x.old  Main.hs  Match.hs  Module.hs  Parser.info  Parser.y  Printer.hs  Syntax.hs  TypeCheck.hs  Types.hs
src/Futz/Lexer/: Layout.hs  Support.hs
src/Quark/: IR.hs  README.md
