name:                futz
version:             0.1.0.0
synopsis:            A programming language I futz with
build-type:          Simple
cabal-version:       >=1.10


Executable futz
  hs-source-dirs:      src, src/parse
  main-is:             Main.hs
  other-modules:       Lexer Parser Printer Syntax Types
  build-depends:       base, array, containers, process, text, mtl,
                       pretty-simple==4.1.2.0,
                       bytestring >= 0.11.4.0
  build-tools:         alex==3.4.0.0, happy
  default-language:    Haskell2010
  ghc-options:	       -Wno-unused-imports
