name:                futz
version:             0.1.0.0
synopsis:            A programming language I futz with
build-type:          Simple
cabal-version:       >=1.10


Executable futz
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Futz.Lexer
                       Futz.Parser
                       Futz.Syntax
                       Futz.Module
                       Futz.Types
                       Futz.Infer

  build-depends:       base, array, containers, process, text, mtl,
                       monad-st,
                       pretty-simple==4.1.2.0,
                       bytestring >= 0.11.4.0,
                       lens==5.2.3,
                       transformers==0.5.6.2,
                       either==5.0.2

  build-tools:         alex==3.4.0.0, happy

  default-language:    Haskell2010

  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       TemplateHaskell
                       
                       
  ghc-options:	       -Wno-unused-imports
