name:                futz
version:             0.1.0.0
synopsis:            A programming language I futz with
author:              Nick Wanninger
build-type:          Simple
cabal-version:       >=1.10


Executable futz
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Futz.Lexer
                       Futz.Lexer.Layout
                       -- Futz.Lexer.Support
                       Futz.Parser
                       Futz.Syntax
                       Futz.Module
                       Futz.Types
                       Futz.Infer
                       Futz.Match

                       Quark.IR

  build-depends:       base, array, containers, process, text, mtl,
                       monad-st,
                       pretty-simple==4.1.2.0,
                       bytestring >= 0.11.4.0,
                       lens==5.2.3,
                       transformers==0.5.6.2,
                       either==5.0.2,
                       Unique==0.4.7.9


  build-tools:         alex >= 3.2.4 && < 4.0,
                       happy >= 1.19.12 && < 2.0

  default-language:    Haskell2010

  default-extensions:  FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                      --  TemplateHaskell
                       
                       
  ghc-options:	       -Wno-unused-imports
